--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,25 +4,22 @@
   box-sizing: border-box;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* background-image: url("../assets/background.jpg");
-  background-size: 100% 100%; */
-}
-
 header {
   margin: 20px 0px;
 }
 
+#page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
 .container {
   width: 100%;
-  /* border: 1px white solid; */
 }
 
 /* search bar */
-
 #search-container {
   display: flex;
   flex-direction: column;
@@ -96,14 +93,6 @@ header {
   transform: translate(-50%, -50%);
 }
 
-.image-card-div:hover {
-  .image-card-div-details{
-    color: black;
-  }
-  /* .image-img{
-    : white;
-  } */
-}
 
 .image-card:hover {
   scale: 1.05;
